--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Server
+name: Deploy to AWS EC2
 
 on:
   push:
@@ -7,10 +7,19 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted  # Using your EC2 as a self-hosted runner
+
     steps:
-      - name: Checkout Repository
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Run Deployment Commands
-        run: echo "Deploying..."
+      - name: Build Docker Image
+        run: docker build -t my-html-app .
+
+      - name: Stop and Remove Old Container
+        run: |
+          docker stop my-html-container || true
+          docker rm my-html-container || true
+
+      - name: Run New Container
+        run: docker run -d -p 80:80 --name my-html-container my-html-app
