--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: self-hosted  # Using your EC2 as a self-hosted runner
+    runs-on: self-hosted # Your EC2 runner
 
     steps:
       - name: Checkout Code
